[package]
name = "rs-probe"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
stm32f1xx-hal = { version = "0.5.3", features = ["stm32f103", "stm32-usbd", "rt"] }
panic-semihosting = "0.5.3"
usb-device = "0.2.5"
embedded-hal = "0.2.3"
cmsis-dap = { path = "../cmsis-dap" }
